# aiagent

./: .gitignore  README.md
api/: .env.example  API_TESTING.md  Cargo.toml  README.md  test_endpoints.sh
api/src/: db.rs  handlers.rs  main.rs  models.rs
dataprep/: README.md  get_data.ipynb  make_daily_table.sql  pyproject.toml  store_data.ipynb
infrastructure/: README.md  deploy.sh  ingress.yaml  postgres-config.yaml  postgres-deploy.yaml  postgres-ingress.yaml  postgres-storage.yaml
mcp-client-python/: client.py
weather/: Cargo.toml
weather/src/: main.rs
