[project]
name = "dataprep"
version = "0.1.0"
description = "Data preparation scripts"
authors = [
    {name = "dhartig",email = "15871457+dhartig@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab (>=4.5.0,<5.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.poetry]
package-mode = false
